--- a/fron-end/index.html
+++ b/fron-end/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h2>How different branch are being merge in git </h2>
+    <input type="text" placeholder="Search">
 </body>
 </html>
